fix: change mysql container to postgres

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-MYSQL_DATABASE=
-MYSQL_ROOT_PASSWORD=
-MYSQL_PASSWORD=
-MYSQL_USER=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 
 DB_HOST=
 DB_PORT=
