--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_DB_AUTH=
+POSTGRES_USER_AUTH=
+POSTGRES_PASSWORD_AUTH=
 
-DB_HOST=
-DB_PORT=
-DB_SCHEMA=
+POSTGRES_DB_REQUEST=
+POSTGRES_USER_REQUEST=
+POSTGRES_PASSWORD_REQUEST=
