--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,25 @@
 services:
-     mysql:
+     cy-auth:
           image: postgres:17
-          container_name: cy-solicitudes
+          container_name: cy-auth
           environment:
-               POSTGRES_DB: ${POSTGRES_DB}
-               POSTGRES_USER: ${POSTGRES_USER}
-               POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+               POSTGRES_DB: ${POSTGRES_DB_AUTH}
+               POSTGRES_USER: ${POSTGRES_USER_AUTH}
+               POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_AUTH}
           ports:
                - "5433:5432"
           volumes:
-               - ./postgres_data:/var/lib/postgresql/data
-               - ./init.sql:/docker-entrypoint-initdb.d/init.sql 
+               - ./postgres_data_auth:/var/lib/postgresql/data
+               - ./sql_scripts/init_auth.sql:/docker-entrypoint-initdb.d/init_auth.sql 
+     cy-requests:
+          image: postgres:17
+          container_name: cy-requests
+          environment:
+               POSTGRES_DB: ${POSTGRES_DB_REQUEST}
+               POSTGRES_USER: ${POSTGRES_USER_REQUEST}
+               POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_REQUEST}     
+          ports:
+               - "5434:5432"
+          volumes:
+               - ./postgres_data_request:/var/lib/postgresql/data
+               - ./sql_scripts/init_request.sql:/docker-entrypoint-initdb.d/init_request.sql 
